examples/type_system/failing/201_base_hof_callback_effect_missing_e400.flx
// E400: Base HOF callback effect requirement must be available in ambient context.

fn noisy_inc(n: Int) -> Int with IO {
    print("tick")
    n + 1
}

fn map_with_io_callback(f: (Int) -> Int with IO) -> Array<Int> with IO {
    map([|1, 2, 3|], f)
}

fn main() with Time {
    let _ = map_with_io_callback(noisy_inc)
}
